--- a/seminar-2022/src/main/resources/application.yaml
+++ b/seminar-2022/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 spring:
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            # TODO 숙제 : 개선을 어떻게 할 수 있을지 알아보자~
-            client-id: ${CLIENT_ID} 
-            client-secret: ${CLIENT_SECRET}
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          google:
+#            # TODO 숙제 : 개선을 어떻게 할 수 있을지 알아보자~
+#            client-id: ${CLIENT_ID} 
+#            client-secret: ${CLIENT_SECRET}
   jpa.show-sql: true
